[gd_scene load_steps=7 format=2]

[ext_resource path="res://PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://scenes/ui/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/fonts/batmfa__.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/ui/VolumeContainer.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 105
outline_size = 7
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="PauseMenu" type="CanvasLayer"]
layer = 100
script = ExtResource( 1 )

[node name="Pause" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0

[node name="DarkTint" type="ColorRect" parent="Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.352941 )

[node name="OverlayBorder" type="ColorRect" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -333.5
margin_top = -239.5
margin_right = 333.5
margin_bottom = 239.5
grow_horizontal = 2
grow_vertical = 2

[node name="Overlay" type="ColorRect" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -328.0
margin_top = -233.5
margin_right = 328.0
margin_bottom = 233.5
grow_horizontal = 2
grow_vertical = 2
color = Color( 0.137255, 0.392157, 0.419608, 1 )

[node name="ButtonArray" type="VBoxContainer" parent="Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -218.0
margin_top = -92.0
margin_right = 219.0
margin_bottom = 93.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 28

[node name="Pause" type="Label" parent="Pause/ButtonArray"]
margin_right = 437.0
margin_bottom = 105.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "PAUSE"
align = 1

[node name="Spacer" type="Label" parent="Pause/ButtonArray"]
margin_top = 133.0
margin_right = 437.0
margin_bottom = 147.0

[node name="HBoxContainer" type="HBoxContainer" parent="Pause/ButtonArray"]
margin_top = 175.0
margin_right = 437.0
margin_bottom = 347.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 7
size_flags_vertical = 0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Pause/ButtonArray/HBoxContainer"]
margin_right = 250.0
margin_bottom = 172.0

[node name="LoadoutMenu" parent="Pause/ButtonArray/HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 250.0
margin_bottom = 75.0
rect_min_size = Vector2( 250, 75 )
size_flags_horizontal = 4
custom_fonts/font = SubResource( 2 )
text = "LOADOUT MENU"

[node name="Spacer2" type="Label" parent="Pause/ButtonArray/HBoxContainer/VBoxContainer"]
margin_top = 79.0
margin_right = 250.0
margin_bottom = 93.0

[node name="Continue" parent="Pause/ButtonArray/HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 97.0
margin_right = 250.0
margin_bottom = 172.0
rect_min_size = Vector2( 250, 75 )
size_flags_horizontal = 4
text = "CONTINUE"

[node name="Spacer2" type="Label" parent="Pause/ButtonArray/HBoxContainer"]
margin_left = 287.0
margin_top = 79.0
margin_right = 287.0
margin_bottom = 93.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 6

[node name="VBoxContainer2" parent="Pause/ButtonArray/HBoxContainer" instance=ExtResource( 4 )]

[connection signal="pressed" from="Pause/ButtonArray/HBoxContainer/VBoxContainer/LoadoutMenu" to="." method="_on_LoadoutMenu_pressed"]
[connection signal="pressed" from="Pause/ButtonArray/HBoxContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
